# Skeletal-Animation-Cloth-Simulation

./: CMakeLists.txt  README.md
cmake/: common.cmake  exercises.cmake
ext/: CMakeLists.txt
ext/cgtub/: CMakeLists.txt  LICENSE
ext/cgtub/include/cgtub/: attribute_buffer.hpp  camera.hpp  camera_controller.hpp  camera_controller_turntable.hpp  camera_orthographic.hpp  camera_perspective.hpp  canvas.hpp  event_dispatcher.hpp  fwd.hpp  geometry.hpp  gl_wrap.hpp  image.hpp  image_renderer.hpp  line_renderer.hpp  log.hpp  mesh_renderer.hpp  ndc_renderer.hpp  point_renderer.hpp  primitives.hpp  render_pipeline.hpp  simple_renderer.hpp  texture_buffer.hpp
ext/cgtub/src/cgtub/: CMakeLists.txt  attribute_buffer.cpp  camera.cpp  camera_controller.cpp  camera_controller_turntable.cpp  camera_orthographic.cpp  camera_perspective.cpp  canvas.cpp  event_dispatcher.cpp  geometry.cpp  gl_wrap.cpp  image.cpp  image_renderer.cpp  line_renderer.cpp  log.cpp  mesh_renderer.cpp  mesh_renderer_shaders.hpp  ndc_renderer.cpp  point_renderer.cpp  render_pipeline.cpp  simple_renderer.cpp  texture_buffer.cpp
ext/glad/: CMakeLists.txt  LICENSE
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/imgui/: CMakeLists.txt
ext/json/: CMakeLists.txt
ext/stb_image/: CMakeLists.txt
ext/tinyobj/: CMakeLists.txt  tiny_obj_loader.h
src/: helper.cpp  helper.hpp  main.cpp
